crates/ddlog-syntax/tests/parse/fail/missing_tuple_comma.rast
ROOT@0..61
  COMMENT@0..51 "// kind:expr validate ..."
  WHITESPACE@51..52 "\n"
  TUPLE_INIT_EXPR@52..60
    L_PAREN@52..53 "("
    TUPLE_EXPR_ELEM@53..55
      NUMBER@53..54
        NUMBER_LITERAL@53..54 "1"
      COMMA@54..55 ","
    WHITESPACE@55..56 " "
    TUPLE_EXPR_ELEM@56..59
      NUMBER@56..57
        NUMBER_LITERAL@56..57 "2"
      WHITESPACE@57..58 " "
      ERROR@58..59
        NUMBER_LITERAL@58..59 "3"
    R_PAREN@59..60 ")"
  WHITESPACE@60..61 "\n"
--
Error: missing comma between tuple elements
   ,-[parse/fail/missing_tuple_comma.dl:2:7]
   |
 2 | (1, 2 3)
   :       |  
   :       `-- expected a comma
---'
--
// kind:expr validate:false pass:false ignore:false
(1, 2 3)
